2005-08-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c(store_label get_data)  src/plot3d.c (get_3ddata):
	For 'plot with labels', instead of treating a missing label as an
	undefined point, treat it as a blank label. That allows putting a
	point on the plot even if there is no label to go with it.
	Bug #1251922.

2005-08-04  Bastian Maerkisch  <bmaerkisch@web.de>

	SF patch [1233984] Directory selection dialog for Win32

	* src/win/wgnuplot.mnu src/win/wmenu.c: Add new directory selection
	dialog to Win32 platform. If SHELL_DIR_DIALOG is defined the common
	directory dialog of the windows shell is used. Otherwise a modified
	version of the common file open dialog is used. The new code is only
	active if WITH_ADV_DIR_DIALOG is defined.

	* src/win/wcommon.h: Make the new directory dialog the default by
	#defining WITH_ADV_DIR_DIALOG and SHELL_DIR_DIALOG.

2005-08-04  Bastian Maerkisch  <bmaerkisch@web.de>

	SF patch [1233987] WIN32: save wgnuplot.ini to user's appdata dir

	* src/plot.c src/plot.h src/win/winmain.c (WinMain): Change default
	location of wgnuplot.ini to the user's APPDATA directory on Win32
	platforms. This is necessary since the directory of the executable can
	not be assumed to be writable.

	* src/win/wcommon.h: Make the new behaviour the default by #defining
	INIFILE_IN_APPDATA.

2005-08-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/contour.c: CodeStyle cleanup (no superfluous pointer casts,
	sensible indentation).
	(contour): Logarithmize parameters of incremental
	contour specification to imitate the way other ticks on log axes
	behave.
	(edge_struct, poly_struct, cntr_struct): Typedef'd these structs,
	use typedef names all over the place to render source less wordy.

2005-08-03  Ethan Merritt  <merritt@u.washington.edu

	Move generation of html demo files into a separate subdirectory.

	* demo/html/index.save demo/html/gnuplot_demo.css:
	Template files for html pages.
